# llm-tools-lab

./: pyproject.toml
src/: main.py
src/llm_tools_lab/: BENCHMARK.md  benchmark.py  config.py  test_graph.py
src/llm_tools_lab/agents/: calculator_graph.py
src/llm_tools_lab/api/: main.py
src/llm_tools_lab/api/routes/: agent.py  rag.py
src/llm_tools_lab/evals/: __init__.py  ragas_eval.py
src/llm_tools_lab/models/: agent.py  calculator.py  classification.py  judge.py  weather.py
src/llm_tools_lab/observability/: langfuse_client.py
src/llm_tools_lab/prompts/: few_shot.py  judge.py
src/llm_tools_lab/rag/: __init__.py  chunker.py  embeddings.py  file_indexer.py  hybrid_retriever.py  indexer.py  rag_agent.py  retriever.py  vector_store.py
src/llm_tools_lab/services/: agent_structured.py  ollama_client.py  structured_client.py
src/llm_tools_lab/tools/: calculator.py  registry.py  strings.py
