[project]
name = "llm-tools-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.6.1",
    "ollama>=0.6.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tools_lab"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
